# rag-llama3-elasticsearch

./: README.md  app.py  index.py  pyproject.toml  query.py
assets/: rag3-llama-arq.drawio
data/: conversations2.json
